syntax = "proto3";

package inventoryapiv1;

import "google/protobuf/empty.proto";

service EmailInventoryService {
    rpc CreateEmail (CreateEmailRequest) returns (google.protobuf.Empty) {}

    rpc FindEmail (FindEmailRequest) returns (FindEmailResponse) {}
}

message Email {
    string recipient = 1;
    string subject = 2;
    string content = 3;
}

message CreateEmailRequest {
    string recipient = 1;
    string subject = 2;
    string content = 3;
}

message FindEmailRequest {
    string recipient = 1;
}

message FindEmailResponse {
    Email emial = 1;
}